# django-openapi-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: claude-desktop.md
example/: README.md  seed.py
example/config/: settings.py  urls.py  wsgi.py
example/shop/: models.py  serializers.py  views.py
example/shop/migrations/: 0001_initial.py
src/django_openapi_mcp/: __init__.py  apps.py  auth.py  conf.py  introspect.py  server.py  tools.py  transport.py
src/django_openapi_mcp/management/commands/: run_mcp_server.py
tests/: conftest.py  mcp_e2e_probe.py  mcp_http_probe.py  test_auth.py  test_introspect.py  test_management.py  test_request.py  test_server.py  test_tools.py
